# nutrition-tracker-ai-mcp

./: .mcp.json  README.md  glama.json  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/mcp/: server-card.json
nutrition_tracker_ai_mcp/: server.py
