[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutrition-tracker-ai-mcp"
version = "0.1.0"
description = "Track daily food intake, sum macros and calories, and compare against personalized targets."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
nutrition_tracker_ai_mcp = "nutrition_tracker_ai_mcp.server:main"
